--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,4 +2,4 @@
 nodaemon=true
 
 [program:flask]
-command=python manage.py runserver -h 0.0.0.0 -p 80
+command=python /data/manage.py runserver -h 0.0.0.0 -p 80
